# Embedded

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
1_hello_pico/: hello_pico.c
2_arithmetic/: arithmetic.c
3_arithmetic_history/: arithmetics.c
4_hysteresis/: hysteria_button.c  input_hysteresis.c  input_hysteresis.h
6_button/: main.c
